# dim

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  rust.yml
example/: README.md  config.toml  swayidle
man/: dim.1.scd
src/: buffer.rs  cli.rs  dim.rs  lib.rs  main.rs  opts.rs  surface.rs
