[package]
name = "dim-screen"
authors = ["Marcelo Hernandez <marcelohdez.inq@gmail.com>"]
description = "Native Wayland screen dimming tool"
homepage = "https://github.com/marcelohdez/dim"
license = "GPL-3.0-only"
keywords = ["wayland", "smithay"]

version = "0.2.2"
edition = "2021"

[[bin]]
name = "dim"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
clap_complete = "4.4"
env_logger = "0.11.2"
log = "0.4.20"
smithay-client-toolkit = "0.18.0"

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1
