[package]
name = "dim-screen"
authors = ["Marcelo Hernandez <marcelohdez.inq@gmail.com>"]
description = "Native Wayland screen dimming tool"
repository = "https://github.com/marcelohdez/dim"
license = "GPL-3.0-only"
keywords = ["wayland", "smithay"]

version = "0.4.1"
edition = "2021"

[[bin]]
name = "dim"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.0"
clap = { version = "4.4.0", features = ["derive"] }
clap_complete = "4.4.0"
env_logger = "0.11.0"
log = "0.4.20"
serde = { version = "1.0.0", features = ["derive"] }
smithay-client-toolkit = "0.19.0"
toml = "0.9.0"
